--- a/design/styles.css
+++ b/design/styles.css
@@ -7,6 +7,7 @@ html, body {
     background-position: center;
     background-size: cover;
     scroll-behavior: smooth;
+    background-image: url('/design/nik-iurev-7h82oLj3GA0-unsplash.jpg'); background-repeat: no-repeat; background-size: cover;
 }
 
 .img_section{
