--- a/css/profile.css
+++ b/css/profile.css
@@ -11,8 +11,6 @@ html, body {
 }
 
 
-/* Верхній прямокутник */
-/* Зберігаємо rectangle fixed */
 .rectangle {
     width: 100%;
     height: 80px;
@@ -97,49 +95,30 @@ html, body {
     color: #ffffff;
 }
 
-.menu_rect {
-    width: 200px;
-    height: 400px;
-    background-color: #d9d9d9;
-    color: #2f2b2b;
-    margin-top: 30px;
-    border-radius: 30px;
-    border: 4px #3e3a3a solid;
-
-    display: flex;              /* додаємо flex */
-    flex-direction: column;     /* елементи по вертикалі */
-    justify-content: center;    /* вертикальне вирівнювання */
-    align-items: center;        /* горизонтальне вирівнювання */
-    text-align: center;         /* вирівнювання тексту */
-    gap: 20px;                  /* відстань між заголовком та іконкою */
-    padding: 20px;
-    box-sizing: border-box;
+.photo_rect{
+    width: 900px;
+    height: 300px;
+    background: #5D5656;
+    margin-top: 80px;
+    border-radius: 15px;
+    border: 8px #3e3939 solid;
 }
-
 
 .wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 90px;
 }
 
-.menu_rect:hover {
-    transform: scale(1.05);
-    transition: 0.3s;
+.info_rect{
+    width: 900px;
+    height: 600px;
+    background: #5D5656;
+    margin-top: 60px;
+    border-radius: 15px;
+    border: 8px #3e3939 solid;
 }
 
-.menu_icon {
-    width: 100px;      /* розмір іконки */
-    height: 100px;
-    object-fit: contain;
-    transition: 0.2s ease;
-}
 
-.menu_icon_wrapper {
-    display: flex;
-    justify-content: center; /* горизонтальне вирівнювання */
-    align-items: center;     /* вертикальне вирівнювання */
-    width: 100px;            /* розмір контейнера */
-    height: 100px;
-}
+
+/*5D5656*/
