--- a/css/profile.css
+++ b/css/profile.css
@@ -1,21 +1,23 @@
-/* БАЗОВІ СТИЛІ */
-* {
-    box-sizing: border-box;
+html, body {
     margin: 0;
     padding: 0;
-    font-family: "Inter", sans-serif;
+    font-family: "Rubik", sans-serif;
+    color: #ffffff;
+
+    background-image: url("../images/bg2(1).jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+
     scroll-behavior: smooth;
 }
 
-body {
-    background-color: #1e1e1e;
-    color: #ffffff;
-}
 
 .rectangle {
     width: 100%;
     height: 80px;
-    background: linear-gradient(90deg, #3e3a3a, #2f2b2b);
+    background: #191919;
     position: fixed;
     top: 0;
     box-shadow: 0 4px 15px rgba(0,0,0,0.5);
@@ -138,9 +140,9 @@ body {
 .profile_card {
     display: flex;
     gap: 30px;
-    background-color: #5d5656;
+    background-color: #191919;
     border-radius: 15px;
-    border: 8px solid #3e3939;
+    border: 4px solid #3e3939;
     padding: 25px;
     width: 900px;
 }
@@ -164,7 +166,7 @@ body {
 }
 
 .description {
-    font-size: 15px;
+    font-size: 17px;
     color: #e0e0e0;
     margin-bottom: 15px;
     line-height: 1.5;
@@ -172,12 +174,13 @@ body {
 
 .profile_meta span {
     display: block;
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 5px;
 }
 
 .tabs_container {
     display: flex;
+    justify-content: center;
     gap: 15px;
     margin-top: 30px;
     width: 900px;
@@ -189,7 +192,7 @@ body {
     background: #4A4A4AFF; /* світліший градієнт */
     border: none;
     border-radius: 14px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 600;
     color: #e0e0e0; /* світлий текст */
     cursor: pointer;
@@ -231,14 +234,17 @@ body {
 .progress_section {
     margin-top: 40px;
     width: 950px;
+    display: flex;
+    justify-content: center;
+
 }
 
 .info_rect {
-    background: #5d5656;
-    border: 8px solid #3e3939;
+    background: #191919;
+    border: 4px solid #3e3939;
     border-radius: 15px;
     padding: 30px;
-    width: 100%;
+    width: 1800px;
     height: auto;
 }
 
@@ -252,7 +258,7 @@ body {
 .language_card {
     display: flex;
     gap: 20px;
-    background: #2b2b2b;
+    background: #232323;
     border-radius: 16px;
     padding: 20px;
     box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05), 0 8px 20px rgba(0,0,0,0.4);
@@ -260,75 +266,59 @@ body {
     transition: 0.3s ease;
 }
 
-/*.language_card:hover {*/
-/*    transform: translateY(-3px);*/
-/*    box-shadow:*/
-/*            0 0 0 2px rgba(0, 170, 255, 0.6),*/
-/*            0 0 10px rgba(0, 170, 255, 0.35),*/
-/*            0 8px 20px rgba(0, 0, 0, 0.4);*/
-/*}*/
+.language_card:hover {
+    transform: translateY(-4px);
+
+}
 
 .language_header {
     text-align: center;
     min-width: 100px;
 }
 
+.stat_card {
+    background: #232323; /* трохи світліше за фон */
+    border-radius: 16px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05), 0 8px 20px rgba(0,0,0,0.4);
+    transition: 0.3s ease;
+    margin-bottom: 5px;
+    width: 200px;
+    position: relative;
+    border: 2px solid #3e3939;
+}
+
+.stat_card:hover {
+    transform: translateY(-4px);
+
+}
+
 .stat_value {
-    font-size: 36px;
+    font-size: 30px; /* трохи більші цифри */
     font-weight: 700;
-    color: #00cfff;
+    color: #008ed3; /* більш яскравий блакитний для контрасту */
 }
 
 .stat_label {
-    font-size: 16px;
-    color: #e0e0e0;
-    margin-top: 5px;
+    font-size: 18px;
+    color: #ffffff; /* світліший для кращої видимості */
+    opacity: 0.9;
 }
 
 .language_text {
     flex: 1;
     color: #e0e0e0;
-    font-size: 15px;
+    font-size: 18px;
     line-height: 1.5;
 }
 
 .language_text .recommendation {
     display: block;
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 16px;
     color: #00aaff;
     font-weight: 500;
-}
-
-
-.stat_card {
-    background: #2A2A2AFF; /* трохи світліше за фон */
-    border-radius: 16px;
-    padding: 20px;
-    text-align: center;
-    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05), 0 8px 20px rgba(0,0,0,0.4);
-    transition: 0.3s ease;
-    margin-bottom: 20px;
-}
-
-/*.stat_card:hover {*/
-/*    transform: translateY(-4px);*/
-/*    box-shadow:*/
-/*            0 0 0 2px rgba(0, 170, 255, 0.6),*/
-/*            0 0 10px rgba(0, 170, 255, 0.35),*/
-/*            0 8px 20px rgba(0, 0, 0, 0.4);*/
-/*}*/
-
-.stat_value {
-    font-size: 36px; /* трохи більші цифри */
-    font-weight: 700;
-    color: #00cfff; /* більш яскравий блакитний для контрасту */
-}
-
-.stat_label {
-    font-size: 15px;
-    color: #e0e0e0; /* світліший для кращої видимості */
-    opacity: 0.9;
 }
 
 
@@ -382,6 +372,10 @@ body {
     border: 1px solid rgba(255,255,255,0.06);
     transition: 0.3s ease;
     cursor: default;
+}
+
+.tip_card:hover {
+    transform: translateY(-4px);
 }
 
 .tip_card p {
