--- a/css/styles_menu.css
+++ b/css/styles_menu.css
@@ -106,7 +106,7 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
 
-    color: #ffffff;
+    color: #191919;
     margin-top: 30px;
     border-radius: 30px;
     border: 4px #3e3a3a solid;
